--- a/Project 3-LSB.ipynb
+++ b/Project 3-LSB.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "adapted from https://github.com/kelvins/steganography/blob/main/steganography.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
